--- a/mycode/homepage.html
+++ b/mycode/homepage.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>MT. OLIVES SDA CHURCH CHANEL</h4>
-    <SCript>
-
-        alert('Welcome To SDA Channel');
-    </SCript>
+    <h4>SOFTWARE ENGINEERING & Application Development</h4>
+   
+    <script src="./login.js"></script>
 </body>
 </html>
