--- a/mycode/index.html
+++ b/mycode/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BSS IN SOFTWARE ENGINEERING</title>
 </head>
 <body>
-    <h4 style="color:darkgoldenrod">SOFTWARE ENGINEERING & Application Development</h4>
-   
-    <script src="./login.js"></script>
+    Welcome to Daud Kakumirizi archive where coding stuffs are staged
+
 </body>
 </html>
